[package]
name = "tagsfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
fuser = "0.10.0"
libc = "0.2.119"
log = "0.4.14"
tokio = "1.17.0"
rusqlite = "0.26.3"
stderrlog = "0.5.1"
clap = { version = "3.1.2", features = ["derive"] }
bimap = "0.6.2"
rand = "0.8.5"
itertools = "0.10.3"

# [dependencies.sqlx]
# version = "0.5.11"
# features = ["any", "macros", "runtime-tokio-rustls"]

[features]
default = ["sqlite"]
sqlite = []
